--- a/styles.css
+++ b/styles.css
@@ -11,29 +11,37 @@ body {
   
   /* HEADER */
   header {
-    max-width: 1000px;
-    margin: 2rem auto 0 auto;
-    padding: 1.5em 1em;
-    background-color: rgba(255, 255, 255, 0.85);
     display: flex;
     justify-content: space-between;
     align-items: flex-end;
+    padding: 1.5em 1em 0;
+    background-color: rgba(255, 255, 255, 0.85);
+    max-width: 1000px;
+    margin: 2rem auto 0 auto;
   }
-  
+
   .logo {
     margin: 0;
+    padding: 0.5em 0.5em 0;
     font-size: 60px;
     font-weight: lighter;
     color: #ffb222;
-    padding-left: 0.5em;
+    line-height: 0.7;
+    display: flex;
+    align-items: flex-end;
   }
   
   nav {
     display: flex;
     gap: 1em;
-    align-self: flex-end;
+    align-items: flex-end;
   }
   
+  h1 {
+  margin: 0;
+  padding: 0;
+}
+
   /* MAIN */
   main {
     background-color: rgba(255, 255, 255);
@@ -43,40 +51,35 @@ body {
     padding: 1em;
     max-width: 1000px;
     margin: 0 auto;
+
   }
-  
-  /* SLOGAN (i main > header) */
-  main > header {
-    padding: 0.2em 0 1em 0;
-    margin: 0;
-    text-align: left;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-}
+
 
 .slogan-subtext {
     margin: 0;
     font-size: 1.1rem;
-    color: #555;
-    white-space: nowrap; /* Hindrar radbrytning */
+    color: #726838;
+    white-space: nowrap; 
     padding-left: 2em;
-    padding-bottom: 1em;
+    text-align: left;
 }
 
 .slogan-line {
     border: none;
-    height: 2px;
+    height: 1.4px;
     background-color: #ffb222;
-    width: 94%;  
-    margin: 0.3em 0 0 0;
+    width: 96%; 
+    margin-top: 0;
+    margin-left: 1em; 
+    margin-right: 1em;
+    padding: 0;
     align-self: center; 
 }
 
   
   
-  /* FILTER */
-  #filters {
+/* FILTER */
+#filters {
     width: 100%;
     text-align: center;
     margin-bottom: 1em;
