--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,8 @@
 body { 
-    font-family: Arial, sans-serif; 
+    font-family: 'IBM Plex Sans', sans-serif;
     text-align: center; 
     margin: 0; 
+    font-weight: 300;
     background-image: url('images/plants4.webp');
     background-size: cover;
     background-position: center center;
@@ -23,12 +24,14 @@ body {
   .logo {
     margin: 0;
     padding: 0.5em 0.5em 0;
-    font-size: 60px;
-    font-weight: lighter;
-    color: #ffb222;
-    line-height: 0.7;
+    font-size: 65px;
+    font-weight: 300;
+    letter-spacing: 2px;
+    color: #FFA01B;
+    line-height: 0.75;
     display: flex;
     align-items: flex-end;
+    text-shadow: -0.5px 1px 2px rgba(0, 0, 0, 0.3);
   }
   
   nav {
@@ -56,6 +59,7 @@ body {
 
 
 .slogan-subtext {
+    font-family: 'Inria Serif', serif;
     margin: 0;
     font-size: 1.1rem;
     color: #726838;
@@ -66,8 +70,8 @@ body {
 
 .slogan-line {
     border: none;
-    height: 1.4px;
-    background-color: #ffb222;
+    height: 1px;
+    background-color: #FFA01B;
     width: 96%; 
     margin-top: 0;
     margin-left: 1em; 
@@ -142,31 +146,34 @@ body {
   }
   
   /* LÄGG I KUNDVAGN */
-  .add-to-cart-btn {
+  .btn {
+    font-family: 'IBM Plex Sans', sans-serif;
     background-color: #ffbc3f; 
     color: black; 
     border: none;
     padding: 0.5em 1.2em; 
     text-align: center;
-    font-size: 12px;
+    font-size: 11px;
     border-radius: 13px;
     cursor: pointer;
     transition: background-color 0.3s, transform 0.2s; 
   }
   
-  .add-to-cart-btn:hover {
+  .btn:hover {
     background-color: rgb(250, 167, 0); 
     transform: scale(1.03);
   }
   
-  .add-to-cart-btn:focus {
+  .btn:focus {
     outline: none;
   }
   
-  .add-to-cart-btn:active {
+  .btn:active {
     transform: scale(1);
     background-color: rgba(201, 134, 0, 0.7);
   }
+
+
   
   /* NAVIGATION */
   .menu-link {
@@ -174,15 +181,34 @@ body {
     margin: 0 10px;
     padding: 8px 14px;
     text-decoration: none;
-    color: #2e2e2e;
-    font-weight: 600;
+    color: #FFA01B;
+    font-weight: 400;
     transition: background-color 0.2s ease;
+    border-radius: 10px 10px 0 0;
   }
   
   .menu-link:hover {
     background-color: #FFEBD5;
     color: #FFA01B;
   }
+
+  .menu-link:active {
+    transform: scale(0.98);
+  }
+
+  .link-on-page {
+    font-family: 'IBM Plex Sans', sans-serif;
+    display: inline-block;
+    margin: 0 10px;
+    padding: 8px 14px;
+    text-decoration: none;
+    color: #FFA01B;
+    background-color: #FFEBD5;
+    font-weight: 400;
+    border-radius: 10px 10px 0 0;
+  }
+
+
   
   /* LANDINGPAGE */
   body.landing {
@@ -225,15 +251,28 @@ body {
   
   /* KUNDVAGN */
   #cart-icon {
-    position: fixed;
-    top: 20px;
-    right: 20px;
-    background-color: white;
-    color: black;
-    border: none;
-    padding: 10px 15px;
+    font-family: 'IBM Plex Sans', sans-serif;
+    margin: 0 10px;
+    padding: 8px 14px;
+    text-decoration: none;
+    font-weight: 400;
+    border-radius: 10px 10px 0 0;
     cursor: pointer;
-    font-size: 18px;
+    background-color: transparent;
+    color: #2e2e2e;
+    border: none;
+    display: inline-flex;
+    align-items: center;
+  }
+  
+  #cart-icon.link-on-page {
+    background-color: #FFEBD5;
+    color: #2e2e2e;
+  }
+  
+  #cart-icon:hover {
+    background-color: #FFEBD5;
+    color: #FFA01B;
   }
   
   #cart-dropdown {
