--- a/styles.css
+++ b/styles.css
@@ -110,6 +110,13 @@ body {
   #filter-dropdown {
     margin-top: 10px;
   }
+
+  fieldset label {
+    display: inline-flex;
+    align-items: center;
+    gap: 0.5em;
+    margin-bottom: 0.5em;
+  }
   
   /* PRODUKTLISTA */
   #product-list {
