style: alter size of images on product page

--- a/styles.css
+++ b/styles.css
@@ -141,6 +141,10 @@ body {
     font-weight: lighter;
     color: inherit;
   }
+
+  .product-image-large {
+    max-width: 30%;
+  }
   
   figure {
     margin: 0;
